--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "babel-plugin-root-import": "^6.4.1",
     "next": "^9.1.2",
     "next-routes": "^1.4.2",
     "react": "^16.11.0",
